fixed spacing of nav

--- a/src/components/style/header.css
+++ b/src/components/style/header.css
@@ -28,6 +28,9 @@ Navbar {
 #navCon {
     display: flex;
     justify-content: space-between;
+    width: 100%;
+    padding: 0;
+    margin: 0;
 }
 
 #brand {
